refactor(manutencao): adiciona MaintenanceMapper e ajusta estrutura de pastas
- Adicionado ManutencaoMapper para conversão de entidades e DTOs.
- Ajustado ManutencaoService para utilizar o novo mapper.
- Reorganizada a estrutura de pastas para alinhar com a arquitetura.